--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "ircmaxell/random-lib": "^1.2",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
