--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SHOPIFY_APIKEY=""
+SHOPIFY_SECRET=""
+SHOPIFY_SCOPES="read_content, write_content, read_themes, write_themes, read_products, write_products, read_product_listings, read_customers, write_customers, read_orders, write_orders, read_orders, write_orders, read_draft_orders, write_draft_orders, read_inventory, write_inventory, read_locations, read_script_tags, write_script_tags, read_fulfillments, write_fulfillments, read_shipping, write_shipping, read_analytics, read_checkouts, write_checkouts, read_reports, write_reports, read_price_rules, write_price_rules, read_marketing_events, write_marketing_events, read_resource_feedbacks, write_resource_feedbacks, read_shopify_payments_payouts, read_shopify_payments_disputes, unauthenticated_read_product_listings, unauthenticated_write_checkouts, unauthenticated_write_customers, unauthenticated_read_customer_tags, unauthenticated_read_content"
+SHOPIFY_REDIRECT_URI="http://127.0.0.1:8000/auth"
